upgrade en css - responsive

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                 <h2 class="portfolio__project-name">Project 1</h2>
             </div>
             <div class="portfolio__project">
-                <a href="https://agusrod9-giifle.netlify.app/"><h2 class="portfolio__project-name">Giifle</h2><p>Una especie de google para buscar Gifs.</p><p>Utiliza la api de Giffy</p></a>
+                <a href="https://pokememory-erp.pages.dev/"><h2 class="portfolio__project-name">PokeMemory</h2><p>El clásico juego de dar vuelta cartas iguales.</p><p>Utiliza la api de Pokèmon</p></a>
             </div>
             <div class="portfolio__project">
-                <h2 class="portfolio__project-name">Project 3</h2>
+                <a href="agusrod9.github.io/giifle/"><h2 class="portfolio__project-name">Giifle</h2><p>Una especie de google para buscar Gifs.</p><p>Utiliza la api de Giffy</p></a>
             </div>
             <div class="portfolio__project">
                 <h2 class="portfolio__project-name">Project 4</h2>
